# amisane

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  amisane.toml  justfile  rust-toolchain.toml
.github/workflows/: prerelease.yml  verify.yml
src/: hash.rs  main.rs  utils.rs
src/init/: config.rs  mod.rs
src/prepare/: meta.rs  mod.rs
wix/: main.wxs
