[package]
name = "amisane"
version = "0.2.1"
edition = "2024"
rust-version = "1.86.0"
repository = "https://github.com/LunchTimeCode/amisane"
authors = ["Silen Celeste Locatelli"]
homepage =  "https://github.com/LunchTimeCode/amisane"
description = "A simple and fast CLI tool to check csv files"

[package.metadata.wix]
upgrade-guid = "5661E123-74F7-4542-A908-3A89C8BE1D31"
path-guid = "FA09ED34-7D97-4321-B101-CA0BE6A23022"
license = false
eula = false


[dependencies]
clap = { version = "4.5.27", features = ["derive", "env"] }
comfy-table = "7.1.3"
polars ={ version = "0.45.1", features = ["simd" ,"nightly"] } 
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.19.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "npm", "homebrew", "msi"]
# A GitHub repo to push Homebrew formulas to
tap = "LunchTimeCode/homebrew-tap"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# The archive format to use for windows builds (defaults .zip)
windows-archive = ".tar.gz"
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".tar.gz"
# A namespace to use when publishing this package to the npm registry
npm-scope = "@lunchtimecode"
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Publish jobs to run in CI
publish-jobs = ["homebrew", "npm"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = true
# Whether cargo-dist should create a Github Release or use an existing draft
create-release = false
