[package]
name = "amisane"
version = "0.2.2"
edition = "2024"
rust-version = "1.86.0"
repository = "https://github.com/LunchTimeCode/amisane"
authors = ["Silen Celeste Locatelli"]
homepage =  "https://github.com/LunchTimeCode/amisane"
description = "A simple and fast CLI tool to check csv files"

[dependencies]
clap = { version = "4.5.27", features = ["derive", "env"] }
comfy-table = "7.1.3"
polars ={ version = "0.45.1", features = ["simd" ,"nightly"] } 
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"


